--- a/Dockerfile.ST-Baseline
+++ b/Dockerfile.ST-Baseline
@@ -66,3 +66,4 @@ RUN export CUDA_HOME="/usr/local/cuda" && cd /opt/warp-ctc/pytorch_binding && /r
 RUN cd /opt && wget http://www.openslr.org/resources/4/sctk-2.4.10-20151007-1312Z.tar.bz2 && tar jxf sctk-2.4.10-20151007-1312Z.tar.bz2 && rm sctk-2.4.10-20151007-1312Z.tar.bz2
 RUN cd /opt/sctk-2.4.10 && make config && make all && make install && make doc
 
+RUN pip install python-Levenshtein
