--- a/Dockerfile.ST-Baseline
+++ b/Dockerfile.ST-Baseline
@@ -58,7 +58,7 @@ RUN cd /opt && \
     git clone https://github.com/markus-m-u-e-l-l-e-r/CTC.ISL && cd CTC.ISL && /root/anaconda3/bin/pip install -r requirements.txt
 ## warp-ctc and pytorch binding
 RUN cd /opt && \
-    git clone https://github.com/SeanNaren/warp-ctc/
+    git clone https://github.com/j4ckl1u/warp-ctc/
 RUN mkdir /opt/warp-ctc/build && cd /opt/warp-ctc/build && cmake .. && make
 RUN export CUDA_HOME="/usr/local/cuda" && cd /opt/warp-ctc/pytorch_binding && /root/anaconda3/bin/python setup.py install
 
